# promptomizer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
configs/: base.yaml  models.yaml
configs/domains/: contractnli.yaml  cuad.yaml  maud.yaml  privacy_qa.yaml
scripts/: prepare_datasets.py  run_evaluation.py  run_pipeline.py  run_viz.py
src/: __init__.py  config.py
src/data/: __init__.py  chunker.py  embedder.py  indexer.py  ingest.py
src/evaluation/: __init__.py  efficiency.py  judge.py  ragas_eval.py
src/retriever/: __init__.py  faiss_retriever.py
src/systems/: __init__.py  dspy_baseline.py  dspy_bootstrap.py  dspy_mipro.py  langchain_rag.py
src/visualization/: __init__.py  plots.py
