[project]
name = "promptomizer"
version = "0.1.0"
description = "DSPy RAG Optimization & Evaluation Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core LLM/RAG frameworks
    "dspy>=2.5",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",

    # Embeddings & Vector Store
    "openai>=1.40",
    "faiss-cpu>=1.8",

    # Document processing
    "pypdf>=4.0",
    "python-docx>=1.1",
    "tiktoken>=0.7",

    # Evaluation
    "ragas>=0.2",

    # Configuration & utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Visualization
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pandas>=2.2",
    "numpy>=1.26",

    # Progress & logging
    "tqdm>=4.66",
    "loguru>=0.7",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
